Updating multiple files

--- a/style.css/index.css
+++ b/style.css/index.css
@@ -50,10 +50,6 @@ a {
     padding: 1rem 0;
 }
 
-main {
-    /* padding: 0 10%; */
-}
-
 main > section:nth-child(1) {
     margin: 5rem 20rem 5em;
     display: flex;
@@ -166,6 +162,7 @@ main > section:nth-child(3) {
     align-items: center;
     gap: 1rem;
     overflow-x: scroll;
+    padding: 1rem;
 }
 
 main > section:nth-child(3)::-webkit-scrollbar{
@@ -174,7 +171,7 @@ main > section:nth-child(3)::-webkit-scrollbar{
 
 main > section:nth-child(3) div:nth-child(2) {
     width: 24.99875rem;
-    height: 33.24875rem;
+    height: 31.24875rem;
     border-radius: 1.125rem;
 }
 
@@ -194,6 +191,8 @@ main > section:nth-child(3) article{
     font-size: 0.875rem;
     position: relative;
     display: inline-block;
+    border-radius: 1.125rem;
+    box-shadow: 2px 4px 12px 0px rgba(0, 0, 0, 0.08);
 }
 
 main > section:nth-child(3) div:nth-child(1) {
@@ -229,11 +228,32 @@ main > p {
     margin: 5rem 20rem 5em;
 }
 
-main > section:nth-child(4) article > div:nth-child(2) {
+main > section:nth-child(4) > article:nth-child(2) article{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    font-weight: 700;
+    font-size: 0.875rem;
+    position: relative;
+    display: inline-block;
+}
+
+main > section:nth-child(4) > article:nth-child(2) 
+> article:nth-child(1)   div:nth-child(2) {
     width: 29.99875rem;
     height: 31.24875rem;
     border-radius: 1.125rem;
 }
+
+main > section:nth-child(4) > article:nth-child(2) 
+> article:nth-child(2)  div:nth-child(2) {
+    width: 29.99875rem;
+    height: 31.24875rem;
+    border-radius: 1.125rem;
+}
+
 
 main > section:nth-child(4) img {
     max-width: 100%;
@@ -244,27 +264,41 @@ main > section:nth-child(4) img {
 main > section:nth-child(4) {
     margin: 8rem 0rem 5em 20rem;
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
+    /* align-items: center; */
+    gap: 1rem;
+    height: 100;
+}
+
+main > section:nth-child(4) > article:nth-child(2)::-webkit-scrollbar{
+    display: none;
+}
+
+main > section:nth-child(4) > article:nth-child(2) {
+    display: flex;
+    width: 100%;
+    overflow-x: scroll;
+    justify-content: space-between;
     align-items: center;
     gap: 1rem;
-    overflow-x: scroll;
+
 }
 
-main > section:nth-child(4) article:nth-child(2) ,
-main > section:nth-child(4) article:nth-child(3) ,
-main > section:nth-child(4) article:nth-child(4) {
-    flex: 1;
+main > section:nth-child(4) article:nth-child(2){
+    display: flex;
+    align-items: start;
+    gap: 1rem;
+    font-weight: 700;
+    font-size: 0.875rem;
 }
 
-main > section:nth-child(4) p:nth-child(1) {
-    width: 100%;
-}
-
-main > section:nth-child(4) article{
+main > section:nth-child(4) article:nth-child(2) 
+article:nth-child(1){
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     gap: 1rem;
     font-weight: 700;
     font-size: 0.875rem;
@@ -274,6 +308,156 @@ main > section:nth-child(4) article{
 
 main > section:nth-child(4) div:nth-child(1) {
     position: absolute;
-    top: 4%; 
-    left: 4%;
+    top: 5%; 
+    left: 5%;
+}
+
+main > section:nth-child(4) p{
+    color: #1D1D1F;
+    font-family: Arial;
+    font-size: 1.5625rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 2rem; /* 128% */
+    letter-spacing: 0.01225rem;
+}
+
+main > section:nth-child(4) span:nth-child(1){
+    color: #6E6E73;
+    font-family: Arial;
+    font-size: 1.5625rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 2rem; /* 128% */
+    letter-spacing: 0.01225rem;
+}
+
+main > section:nth-child(4) > article:nth-child(2) >
+article:nth-child(1) > div:nth-child(1) p{
+    color: #6E6E73;
+    font-family: Arial;
+    font-size: 0.6875rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1rem; /* 145.455% */
+    letter-spacing: -0.0075rem;
+}
+
+main > section:nth-child(4) > article:nth-child(2) >
+article:nth-child(1) > div:nth-child(1) h1{
+    color: #1D1D1F;
+    font-family: Arial;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 2rem;
+    letter-spacing: 0.01225rem;
+    margin-top: .7rem;
+}
+
+main > section:nth-child(4) > article:nth-child(2) > 
+article:nth-child(2) {
+    color: #6E6E73;
+    font-family: Arial;
+    font-size: 0.6875rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1rem; /* 145.455% */
+    letter-spacing: -0.0075rem;
+}
+
+main > section:nth-child(4) > article:nth-child(2) >
+article:nth-child(2) > div:nth-child(1) p:nth-child(1){
+    color: #F56300;
+    font-family: Arial;
+    font-size: 0.75rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1rem; /* 133.333% */
+    letter-spacing: -0.0075rem;
+}
+
+main > section:nth-child(4) > article:nth-child(2) >
+article:nth-child(2) > div:nth-child(1) p:nth-child(3){
+    color: #FFF;
+    font-family: Arial;
+    font-size: 1.0625rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.3125rem; /* 123.529% */
+    letter-spacing: -0.02338rem;
+    margin: 0;
+}
+
+main > section:nth-child(4) > article:nth-child(2) 
+article:nth-child(2) > div:nth-child(1) h1{
+    color: #FFF;
+    font-family: Arial;
+    font-size: 1.5625rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 2rem; /* 128% */
+    letter-spacing: 0.01225rem;
+    margin: .7rem 0;
+}
+
+main > section:nth-child(4) > article:nth-child(2) 
+article:nth-child(3){
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 1rem;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 31.25rem;
+    height: 31.24875rem;
+}
+
+main > section:nth-child(4) > article:nth-child(2) >
+article:nth-child(3) article{
+    position: relative;
+    display: inline-block;
+    width: 29.99875rem;
+    height: 15rem;
+    border-radius: 1.125rem;
+    box-shadow: 2px 4px 12px 0px rgba(0, 0, 0, 0.08);
+    gap: 1rem;
+}
+
+main > section:nth-child(4)  > article:nth-child(2) > 
+article:nth-child(3) p{
+    position: absolute;
+    top: 4rem;
+    left: 2rem;
+    font-size: 0.875rem;
+    color: #1D1D1F;
+    font-family: Arial;
+    font-size: 1.375rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.75rem; /* 127.273% */
+    letter-spacing: 0.0135rem;
+} 
+
+main > section:nth-child(4) > article:nth-child(2) 
+> article:nth-child(3)  div {
+    width: 29.99875rem;
+    height: 15rem;
+    border-radius: 1.125rem;
+}
+
+main > section:nth-child(4) > article:nth-child(2) 
+> article:nth-child(3)  img {
+    width: 29.99875rem;
+    height: 15rem;
+    border-radius: 1.125rem;
+}
+
+main > section:nth-child(4) > article:nth-child(2)
+> article:nth-child(1),
+main > section:nth-child(4) > article:nth-child(2) 
+> article:nth-child(2){
+    box-shadow: 2px 4px 12px 0px rgba(0, 0, 0, 0.08);
+    border-radius: 1.125rem;
+    width: 29.99875rem;
 }
